linux environment added

--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "scripts": {
     "build": "npm run clean && npm run build-frontend && run-script-os",
-    "build:macos": "./venv/bin/python build-macos.py py2app",
-    "build:windows": ".\\venv\\Scripts\\pyinstaller build-windows.spec",
-    "build:linux": "./venv/bin/pyinstaller build-linux.spec",
+    "build:macos": "./venv-pywebview/bin/python build-macos.py py2app",
+    "build:windows": ".\\venv-pywebviewenv\\Scripts\\pyinstaller build-windows.spec",
+    "build:linux": "./venv-pywebview/bin/pyinstaller build-linux.spec",
     "build-frontend": "cd frontend && npm run build",
     "clean": "run-script-os",
     "clean:default": "rm -rf dist 2>/dev/null; rm -rf gui 2>/dev/null; rm -rf build 2>/dev/null; ",
     "clean:windows": "if exist dist rd /S /Q dist & if exist build rd /S /Q build & if exist gui rd /S /Q gui",
     "dev": "cd frontend && npm run dev",
-    "init": "npm install && npm run init-frontend",
+    "init": "npm install && npm run init-frontend && run-script-os",
+    "init:windows": "virtualenv -p python venv-pywebview && .\\venv-pywebview\\Scripts\\pip install -r requirements.txt",
+    "init:linux": "virtualenv -p python3 venv-pywebview && if [[ -z \"${KDE_FULL_SESSION}\" ]]; then npm run init:qt5; else npm run init:gtk; fi",
+    "init:default": "virtualenv -p python3 venv-pywebview && ./venv-pywebview/bin/pip install -r requirements.txt",
+    "init:qt5": "./venv-pywebview/bin/pip install pyqt5 pyqtwebengine -r requirements.txt",
+    "init:gtk": "sudo apt install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 && ./venv-pywebview/bin/pip install pycairo pygobject -r requirements.txt",
     "init-frontend": "cd frontend && npm install",
     "start": "npm run build-frontend && run-script-os",
-    "start:windows": ".\\venv\\Scripts\\python backend\\index.py",
-    "start:default": "./venv/bin/python backend/index.py"
+    "start:windows": ".\\venv-pywebview\\Scripts\\python backend\\index.py",
+    "start:default": "./venv-pywebview/bin/python backend/index.py"
   },
   "repository": {
     "type": "git",
